syntax = "proto3";

package dnf.v1;

// Go代码生成选项
option go_package = "dnf/proto/v1;optionv1";

// Java代码生成选项（重要）
option java_multiple_files = true;  // 为每个消息生成独立的Java文件
option java_package = "com.dnfm.mina.protobuf.generated";
option java_outer_classname = "OptionTypesProto";

// 战斗选项枚举
enum BattleOptionType {
  BATTLE_OPTION_TYPE_NONE = 0;    // 无
  BATTLE_OPTION_TYPE_EVADE = 1;   // 闪避
}

// 系统buff附加信息
message SystemBuffAppendage {
  int32 index = 1;                  // 索引
  int64 endtime = 2;                // 结束时间
  repeated int32 values = 3;        // 值列表
}

// 系统buff附加列表响应
message ResSystemBuffAppendageList {
  int32 error = 1;                              // 错误码
  int64 time = 2;                               // 时间戳
  repeated SystemBuffAppendage appendages = 3;  // 附加信息列表
}

// 战斗选项
message BattleOption {
  BattleOptionType type = 1;  // 选项类型
  bool value = 2;             // 选项值
}

// 随机选项选择响应
message ResRandomOptionSelect {
  int32 error = 1;    // 错误码
  uint64 guid = 2;    // GUID
  int32 type = 3;     // 类型
  // 装备信息（引用自其他文件）
  uint64 equip_guid = 4;  // 装备GUID
  int32 equip_type = 5;   // 装备类型
}
